; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/sysutils/utils/pice/module/extr_bp.c_DeInstallInt3Hook.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/sysutils/utils/pice/module/extr_bp.c_DeInstallInt3Hook.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [30 x i8] c"enter DeInstallInt3Hook()...\0A\00", align 1
@OldInt3Handler = common dso_local global i64 0, align 8
@TRUE = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [30 x i8] c"leave DeInstallInt3Hook()...\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @DeInstallInt3Hook() #0 {
  %1 = call i32 (...) @ENTER_FUNC()
  %2 = call i32 @DPRINT(i32 ptrtoint ([30 x i8]* @.str to i32))
  %3 = call i32 (...) @MaskIrqs()
  %4 = load i64, i64* @OldInt3Handler, align 8
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %12

6:                                                ; preds = %0
  %7 = load i32, i32* @TRUE, align 4
  %8 = call i32 @RemoveAllSWBreakpoints(i32 %7)
  %9 = load i64, i64* @OldInt3Handler, align 8
  %10 = trunc i64 %9 to i32
  %11 = call i32 @SetGlobalInt(i32 3, i32 %10)
  store i64 0, i64* @OldInt3Handler, align 8
  br label %12

12:                                               ; preds = %6, %0
  %13 = call i32 (...) @UnmaskIrqs()
  %14 = call i32 @DPRINT(i32 ptrtoint ([30 x i8]* @.str.1 to i32))
  %15 = call i32 (...) @LEAVE_FUNC()
  ret void
}

declare dso_local i32 @ENTER_FUNC(...) #1

declare dso_local i32 @DPRINT(i32) #1

declare dso_local i32 @MaskIrqs(...) #1

declare dso_local i32 @RemoveAllSWBreakpoints(i32) #1

declare dso_local i32 @SetGlobalInt(i32, i32) #1

declare dso_local i32 @UnmaskIrqs(...) #1

declare dso_local i32 @LEAVE_FUNC(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
